# switchbot-actions

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.armv6  README.md  RELEASING.md  config.yaml.example  docker-bake.hcl  pyproject.toml  requirements-dev.txt  requirements.txt
.docker/: build-wheels.sh
.github/workflows/: ci.yml  publish-to-pypi.yml  publish-to-testpypi.yml  release.yml
docs/: deployment.md  specification.md
docs/images/: conceptual-diagram.mmd
switchbot_actions/: action_executor.py  action_runner.py  app.py  cli.py  config.py  config_loader.py  dispatcher.py  error.py  evaluator.py  exporter.py  handlers.py  main.py  mixins.py  mqtt.py  scanner.py  signals.py  state.py  store.py  timers.py  triggers.py
switchbot_exporter/: dispatcher.py  exporter.py  handlers.py  main.py  manager.py  mixins.py  pyvenv.cfg  scanner.py  signals.py  store.py  timers.py  triggers.py
tests/: conftest.py  test_action_executor.py  test_action_runner.py  test_app.py  test_cli.py  test_config.py  test_config_loader.py  test_dispatcher.py  test_error.py  test_evaluator.py  test_exporter.py  test_handlers.py  test_main.py  test_manager.py  test_mixins.py  test_mqtt.py  test_scanner.py  test_state.py  test_store.py  test_timers.py  test_triggers.py
tests/e2e/: conftest.py  helpers.py  test_mqtt_log.py  test_mqtt_mqtt_publish.py  test_mqtt_webhook.py
