[project]
name = "switchbot-actions"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov"

[tool.coverage.run]
source = ["switchbot_actions"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
switchbot-actions = "switchbot_actions.main:cli_main"
